--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title><%- title %></title>
+    <link rel="stylesheet" href="./assets/style/all.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title><%- title %></title>
-  <link rel="stylesheet" href="./assets/style/all.css">
-</head>
+  <body>
 
-<body>
-  <header class="header">
-    這是 header
-  </header>
+    <%- contents %>
 
-  <%- contents %>
-
-  <footer class="footer">
-    footer
-  </footer>
-  <script src="./assets/js/vendors.js"></script>
-  <script src="./assets/js/all.js"></script>
-</body>
-
+    <footer class="footer">
+      <div class="contact container">
+        <h2>Contact</h2>
+        <ul>
+          <li>Mail：xxxd@hexschool.com</li>
+          <li>Phone Number：0910123456</li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
