--- a/app/assets/style/_main.scss
+++ b/app/assets/style/_main.scss
@@ -1,5 +1,5 @@
 .banner {
-  background-image: url('../images/banner.png');
+  background-image: url('/assets/images/banner.png');
   background-size: cover;
   background-position: center;
   color: $white;
